# sqldoc

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sqldoc.example.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  LIVE_TESTING.md  PUBLISHING.md  README.md  SECURITY.md  TESTING.md  adventureworks_docs.html  docker-compose.yml  output.html  pricing-strategy.md  pyproject.toml  requirements.txt  test_ai.py  test_connection.py  test_render.py
.github/actions/sqldoc/: README.md  action.yml  example-workflow.yml  publish-action.sh
.github/workflows/: main.yml
azure-pipelines/: sqldoc.yml
deploy/: README.md  aws-ecs-fargate.yaml  azure-container-app.bicep  gcp-cloud-run.tf
helm/sqldoc/: Chart.yaml  values.yaml
helm/sqldoc/templates/: _helpers.tpl  deployment.yaml  pvc.yaml  secret.yaml  service.yaml
sqldoc/: ai.py  api.py  audit.py  authn.py  backup.py  baseline.py  baseline_renderer.py  capacity.py  capacity_renderer.py  cli.py  cms.py  cms_bulk.py  cms_executive.py  cms_executive_renderer.py  cms_renderer.py  cms_report.py  comply.py  comply_multi.py  comply_multi_renderer.py  comply_renderer.py  dbt.py  dbt_renderer.py  dbutil.py  deadlocks.py  deadlocks_renderer.py  doctor.py  executive.py  executive_renderer.py  extractor.py  frameworks.py  frameworks_renderer.py  ha.py  ha_renderer.py  health.py  health_renderer.py  hooks.py  industry.py  insights.py  insights_renderer.py  intel.py  (+24 more)
sqldoc/access/: __init__.py  ad.py  approval.py  checker.py  cms_review.py  config.py  formats.py  gap.py  intake.py  jira_flow.py  login_types.py  model.py  parse.py  recommend.py  render.py  review.py  roles.py  script.py  sqlserver.py  titles.py
sqldoc/adapters/: __init__.py  aurora.py  azure_mi.py  base.py  bigquery.py  cockroachdb.py  databricks.py  db2.py  mongodb.py  mysql.py  oracle.py  postgres.py  redshift.py  snowflake.py  sqlite.py  sqlserver.py  synapse.py
sqldoc/agent/: __init__.py  alerting.py  cli.py  cms_monitor.py  config.py  daemon.py  dashboard.py  estate_digest.py  integrations_push.py  nl_alerts.py  notify.py  poller.py  store.py  weekly.py
sqldoc/integrations/: __init__.py  azuredevops.py  azuredevops_wiki.py  base.py  box.py  config.py  confluence.py  dropbox.py  gdrive.py  github_wiki.py  gitlab_wiki.py  jira.py  notion.py  nuclino.py  onedrive.py  powerbi.py  reports.py  servicenow.py  sharepoint.py  webhook.py
terraform-provider/: README.md  main.go
terraform-provider/examples/: main.tf
tests/: conftest.py  test_access_ad.py  test_access_approve.py  test_access_check.py  test_access_formats.py  test_access_identity.py  test_access_intake.py  test_access_jira.py  test_access_login_types.py  test_access_recommend.py  test_access_request.py  test_access_review.py  test_access_script.py  test_ad_coverage.py  test_adapters.py  test_agent_cli.py  test_agent_config.py  test_agent_dashboard.py  test_agent_poller.py  test_agent_store.py  test_ai.py  test_ai_backends.py  test_alerting.py  test_api.py  test_api_coverage.py  test_audit.py  test_aurora_adapter.py  test_authn.py  test_azure_mi_adapter.py  test_azuredevops.py  test_backup.py  test_baseline.py  test_bigquery_adapter.py  test_box.py  test_capacity.py  test_cli.py  test_cms.py  test_cms_access.py  test_cms_agent.py  test_cms_bulk.py  (+64 more)
tests/integration/: _live.py  test_access.py  test_agent.py  test_cms.py  test_cross_dialect.py  test_mysql.py  test_performance.py  test_postgres.py  test_sqlserver.py
tests/integration/docker/: setup_mysql.sh  setup_postgres.sh
tests/live/: README.md  _liveutil.py  sqldoc.live.example.yml  test_ai_backends_live.py  test_dialects_live.py  test_identity_live.py  test_integrations_live.py  test_notifications_live.py
tests/regression/: test_contracts.py
tests/security/: test_api_auth.py  test_credentials.py  test_network_ssrf.py  test_sql_and_paths.py
vscode-extension/: .vscodeignore  README.md  build-vsix.py  extension.js  package.json  sqldoc-vscode.vsix
