[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sqldoc"
version = "2.6.0"
description = "Multi-database documentation generator + PII/compliance scanner for SQL Server, PostgreSQL, MySQL and Azure SQL, with optional AI-written descriptions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Harsh Tamboli" }]
keywords = ["sql-server", "postgresql", "mysql", "azure-sql", "documentation", "database", "schema", "er-diagram"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Database",
    "Topic :: Documentation",
]
dependencies = [
    "anthropic>=0.109",
    "click>=8.1",
    "Jinja2>=3.1",
    "pyodbc>=5.0",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "fpdf2>=2.8",
    "requests>=2.31",
]

[project.optional-dependencies]
# Database drivers are optional: SQL Server (pyodbc) is a core dependency and
# SQLite uses the stdlib; the postgres/mysql/snowflake drivers install only when
# you target those engines.
postgres = ["psycopg2-binary>=2.9"]
mysql = ["mysql-connector-python>=8.0"]
snowflake = ["snowflake-connector-python>=3.0"]
oracle = ["oracledb>=2.0"]
databricks = ["databricks-sql-connector>=3.0"]
bigquery = ["google-cloud-bigquery>=3.0"]
db2 = ["ibm-db>=3.2"]
mongodb = ["pymongo>=4.0"]
# Optional cloud AI backends (Anthropic is a core dependency; ollama is local).
openai = ["openai>=1.0"]
gemini = ["google-generativeai>=0.5"]
# Optional SSO for the dashboard + REST API (OIDC bearer / SAML assertion).
sso = ["PyJWT[crypto]>=2.8"]
saml = ["signxml>=3.2", "defusedxml>=0.7"]
# Optional publishing / ticketing integrations. Connectors that only speak REST
# reuse the core `requests` dependency; the rest pull their vendor SDK. Install
# just the one you use, e.g. `pip install sqldoc[confluence]`.
sharepoint = ["msal>=1.24"]
confluence = ["requests>=2.31"]
notion = ["requests>=2.31"]
gdrive = ["google-api-python-client>=2.100", "google-auth>=2.20"]
box = ["boxsdk[jwt]>=3.9"]
jira = ["requests>=2.31"]
servicenow = ["requests>=2.31"]
azuredevops = ["requests>=2.31"]
powerbi = ["msal>=1.24"]
integrations = ["msal>=1.24", "google-api-python-client>=2.100",
                "google-auth>=2.20", "boxsdk[jwt]>=3.9"]
# Active Directory / Entra ID lookup for the `sqldoc access` suite. ldap3 is pure
# Python (no native deps); msal covers the Entra ID / Graph alternative.
activedirectory = ["ldap3>=2.9", "msal>=1.24"]
# Redshift + CockroachDB + Aurora reuse the postgres/mysql drivers; Azure SQL MI
# and Synapse reuse pyodbc (a core dependency).
all = ["psycopg2-binary>=2.9", "mysql-connector-python>=8.0",
       "snowflake-connector-python>=3.0", "oracledb>=2.0",
       "databricks-sql-connector>=3.0", "google-cloud-bigquery>=3.0",
       "ibm-db>=3.2", "pymongo>=4.0", "openai>=1.0", "google-generativeai>=0.5"]
test = ["pytest>=8", "pypdf>=4"]

[project.urls]
Homepage = "https://github.com/htamber1/sqldoc"
Repository = "https://github.com/htamber1/sqldoc"

[project.scripts]
sqldoc = "sqldoc.cli:cli"

[tool.setuptools]
packages = ["sqldoc", "sqldoc.adapters", "sqldoc.agent", "sqldoc.integrations", "sqldoc.access"]

[tool.pytest.ini_options]
testpaths = ["tests"]
